More Java optimizations and code review for library and spawning systems.